--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "https://github.com/amdjs/amdjs-api/wiki/AMD"
   ],
   "devDependencies": {
+    "fiber": "~1.0.4",
     "grunt": "~0.4.0",
     "grunt-contrib-compress": "~0.4.8",
     "grunt-contrib-concat": "~0.1.3",
@@ -41,6 +42,8 @@
     "grunt-contrib-uglify": "~0.1.2",
     "grunt-contrib-clean": "~0.4.0",
     "grunt-contrib-qunit": "~0.2.0",
+    "grunt-include-replace": "~0.1.0",
+    "grunt-bower-task": "~0.3.2",
     "grunt-shell": "~0.2.1",
     "grunt-express": "~0.2.0",
     "express": "~3.0.0",
